--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <!-- Additional CSS -->
-  <link rel="stylesheet" href="../css/post.css">
+  <link rel="stylesheet" href="css/post.css">
 
   <!-- CSS riêng -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white">
