--- a/html/about.html
+++ b/html/about.html
@@ -31,7 +31,7 @@
                   grid md:grid-cols-3 gap-10 items-center
                   shadow-xl border border-slate-700">
     <div class="flex justify-center">
-      <img src="../asset/avatar.jpg"
+      <img src="asset/avatar.jpg"
            alt="Ảnh đại diện"
            class="w-48 h-48 rounded-full object-cover
                   border-4 border-cyan-400
@@ -86,7 +86,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="../asset/chungchi1.jpg" class="w-full h-48 object-cover">
+        <img src="asset/chungchi1.jpg" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             Networking Basics
