--- a/html/blog.html
+++ b/html/blog.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <title>Blog Lập Trình Mạng – Java & JavaScript</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="../css/post.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/post.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <header class="fixed top-0 w-full bg-black/50 backdrop-blur shadow z-50">
   <nav class="max-w-6xl mx-auto flex justify-between items-center p-4">
@@ -122,6 +122,6 @@
 <footer class="border-t border-slate-700 py-6 text-center text-slate-400">
   © 2025 • Blog học tập Lập Trình Mạng • Sinh viên CNTT
 </footer>
-<script src="../js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
