--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 Portfolio này được xây dựng nhằm ghi lại quá trình học tập,dự án nhỏ và kiến thức mình tích lũy trong quá trình học.
     </div>
 
-    <img src="../asset/avatar.jpg" alt="Ảnh đại diện" class="intro-avatar intro-avatar-right">
+    <img src="asset/avatar.jpg" alt="Ảnh đại diện" class="intro-avatar intro-avatar-right">
   </div>
 </section>
 
