--- a/html/about.html
+++ b/html/about.html
@@ -100,7 +100,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="../asset/chungchi2.jpg" class="w-full h-48 object-cover">
+        <img src="asset/chungchi2.jpg" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             JavaScript Essentials 1
@@ -114,7 +114,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="../asset/chungchi3.jpg" class="w-full h-48 object-cover">
+        <img src="asset/chungchi3.jpg" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             JavaScript Essentials 2
