--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,6 @@
 <footer class="border-t border-slate-700 py-6 text-center text-slate-400">
   © 2025 • Blog học tập Lập Trình Mạng • Sinh viên CNTT
 </footer>
-<script src="/html/js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
