--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <!-- Additional CSS -->
-  <link rel="stylesheet" href="/html/css/post.css">
+  <link rel="stylesheet" href="css/post.css">
 
   <!-- CSS riêng -->
-  <link rel="stylesheet" href="/html/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white">
@@ -50,7 +50,7 @@
 Portfolio này được xây dựng nhằm ghi lại quá trình học tập,dự án nhỏ và kiến thức mình tích lũy trong quá trình học.
     </div>
 
-    <img src="/html/asset/avatar.jpg" alt="Ảnh đại diện" class="intro-avatar intro-avatar-right">
+    <img src="asset/avatar.jpg" alt="Ảnh đại diện" class="intro-avatar intro-avatar-right">
   </div>
 </section>
 
