--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                   grid md:grid-cols-3 gap-10 items-center
                   shadow-xl border border-slate-700">
     <div class="flex justify-center">
-      <img src="asset/avatar.jpg"
+      <img src="asset/avatar1.jpg"
            alt="Ảnh đại diện"
            class="w-48 h-48 rounded-full object-cover
                   border-4 border-cyan-400
