--- a/about.html
+++ b/about.html
@@ -45,14 +45,10 @@
 
       <p class="mt-4 text-slate-200 text-lg leading-relaxed">
         Sinh viên ngành <span class="font-semibold text-cyan-400">Công nghệ Thông tin</span>,
-        định hướng phát triển trong lĩnh vực
-        <span class="font-semibold text-cyan-400">lập trình phần mềm</span>.
+        
+        <span class="font-semibold text-cyan-400">trường Đại học Công Nghệ TP.HCM</span>.
       </p>
-
-      <p class="mt-4 text-slate-400">
-        Trang portfolio này được xây dựng nhằm giới thiệu bản thân,
-        quá trình học tập và các chứng chỉ đã hoàn thành trong thời gian học.
-      </p>
+      <p>Học, học nữa, học mãi. </p>
     </div>
   </section>
 
