--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         
         <span class="font-semibold text-cyan-400">trường Đại học Công Nghệ TP.HCM</span>.
       </p>
-      <p>Học, học nữa, học mãi. </p>
+      <p> <span class="font-semibold text-cyan-400"> Học, học nữa, học mãi.</span> </p>
     </div>
   </section>
 
@@ -82,7 +82,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="asset/chungchi1.jpg" class="w-full h-48 object-cover">
+        <img src="asset/nw.png" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             Networking Basics
@@ -96,7 +96,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="asset/chungchi2.jpg" class="w-full h-48 object-cover">
+        <img src="asset/1.png" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             JavaScript Essentials 1
@@ -110,7 +110,7 @@
       <div class="bg-slate-800 rounded-xl overflow-hidden
                   hover:-translate-y-2 hover:shadow-cyan-500/20
                   transition-all duration-300 shadow-lg border border-slate-700">
-        <img src="asset/chungchi3.jpg" class="w-full h-48 object-cover">
+        <img src="asset/2.png" class="w-full h-48 object-cover">
         <div class="p-5">
           <h3 class="font-semibold text-cyan-300">
             JavaScript Essentials 2
