--- a/about.html
+++ b/about.html
@@ -48,7 +48,9 @@
         
         <span class="font-semibold text-cyan-400">trường Đại học Công Nghệ TP.HCM</span>.
       </p>
-      <p> <span class="font-semibold text-cyan-400"> Học, học nữa, học mãi.</span> </p>
+       <h1 class="text-4xl font-extrabold text-cyan-300">
+       Học, học nữa, học mãi
+      </h1>
     </div>
   </section>
 
